tests/error/array_non_int_index.vbc
// 预期：应对浮点下标报「数组下标必须是整数类型」错误

int main() {
    int arr[3];
    arr[1.5] = 1;
    return 0;
}

main();
